# tiny-torch

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build_system_status.py  diagnose_build.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_build_artifacts.py  verify_phase1_1.py
.github/workflows/: ci.yml
benchmarks/cpp/: CMakeLists.txt  ops_benchmark.cpp  tensor_benchmark.cpp
build_cmake/: CTestTestfile.cmake
build_cmake/test/cpp/: CTestTestfile.cmake  tiny_torch_cpp_tests
csrc/api/src/: autograd_api.cpp  python_bindings.cpp  tensor_api.cpp
csrc/aten/src/ATen/core/: Allocator.cpp  Storage.cpp  Tensor.cpp  TensorImpl.cpp
csrc/aten/src/ATen/cuda/: CUDAContext.cu
csrc/aten/src/ATen/native/: Activation.cpp  BinaryOps.cpp  LinearAlgebra.cpp  Reduction.cpp  UnaryOps.cpp
csrc/aten/src/ATen/native/cuda/: Activation.cu  BinaryOps.cu  LinearAlgebra.cu  Reduction.cu  UnaryOps.cu
csrc/aten/src/TH/: THAllocator.cpp  THStorage.cpp  THTensor.cpp
csrc/autograd/: engine.cpp  function.cpp  variable.cpp
csrc/autograd/functions/: basic_ops.cpp
docker/: .dockerignore  Dockerfile  Dockerfile.cpu  README.md  build.sh  docker-compose.yml
docs/: README.md  distributed_training.md  phase1_1_completion_summary.md  phase1_1_comprehensive.md  phase1_1_summary.md  v_1_1_spec.md
examples/: README.md  launch_distributed_resnet50.sh
scripts/: build.sh
test/: README.md  __init__.py  run_tests.py  test_build_system.py  test_cuda.py  test_cuda_detection.py  verify_phase1_1.py
test/cpp/: CMakeLists.txt  simple_test_main.cpp  test_autograd.cpp  test_tensor.cpp
test/fixtures/: README.md
test/integration/: test_api.py  test_build_cuda.py
test/system/: test_complete.py  test_performance.py
test/unit/: test_build.py  test_core.py  test_cuda.py
test/utils/: __init__.py  build.py  common.py  cuda.py
tests/: README.md  __init__.py  run_tests.py  setup_test_env.sh  verify_phase1_1.py
tests/cpp/: CMakeLists.txt
tests/fixtures/: README.md  test_config.json
tests/integration/: test_api.py  test_build_cuda.py  test_cuda_integration.py
tests/system/: test_complete.py  test_performance.py
tests/unit/: test_build.py  test_core.py  test_cuda.py  test_cuda_marked.py
tests/utils/: build.py  common.py  cuda.py
tiny_torch/: __init__.py  cuda.py
tiny_torch/autograd/: __init__.py
tiny_torch/cuda/: __init__.py
tiny_torch/nn/: __init__.py
tiny_torch/optim/: __init__.py
tools/: check_cuda.py  check_env.py  diagnose_build.py  install_tiny_torch.sh  verify_phase.py
tools/memory/: README.md  __init__.py  __main__.py  distributed_memory_monitor.py  fragmentation_analyzer.py  memory_debug.py  memory_debug_cli.py  memory_leak_detector.py  memory_profiler.py  oom_detector.py  requirements.txt  setup.sh  test_integration.py  test_memory_tools.py
tools/setup_helpers/: __init__.py  env.py
torch/: __init__.py  cuda.py  py.typed
torch/autograd/: __init__.py
torch/cuda/: __init__.py
torch/nn/: __init__.py
torch/optim/: __init__.py
